[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/Dice.gd" id="1_1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.95, 0.95, 0.95, 1)
roughness = 0.45
metallic = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_1"]
size = Vector3(1, 1, 1)

[node name="Dice" type="Node3D"]
script = ExtResource("1_1")

[node name="Body" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="Outline" type="MeshInstance3D" parent="Body"]

[node name="Edges" type="MeshInstance3D" parent="Body"]

[node name="FaceUp_1" type="Label3D" parent="."]
text = "1"
font_size = 96
pixel_size = 0.01
position = Vector3(0, 0.501, 0)
rotation = Vector3(-1.570796, 0, 0)
modulate = Color(0.1, 0.1, 0.1, 1)
outline_modulate = Color(1, 1, 1, 1)
outline_size = 10
billboard = 0
shaded = false

[node name="FaceDown_6" type="Label3D" parent="."]
text = "6"
font_size = 96
pixel_size = 0.01
position = Vector3(0, -0.501, 0)
rotation = Vector3(1.570796, 0, 3.141593)
modulate = Color(0.1, 0.1, 0.1, 1)
outline_modulate = Color(1, 1, 1, 1)
outline_size = 10
billboard = 0
shaded = false

[node name="FaceRight_3" type="Label3D" parent="."]
text = "3"
font_size = 96
pixel_size = 0.01
position = Vector3(0.501, 0, 0)
rotation = Vector3(0, 1.570796, 0)
modulate = Color(0.1, 0.1, 0.1, 1)
outline_modulate = Color(1, 1, 1, 1)
outline_size = 10
billboard = 0
shaded = false

[node name="FaceLeft_4" type="Label3D" parent="."]
text = "4"
font_size = 96
pixel_size = 0.01
position = Vector3(-0.501, 0, 0)
rotation = Vector3(0, -1.570796, 0)
modulate = Color(0.1, 0.1, 0.1, 1)
outline_modulate = Color(1, 1, 1, 1)
outline_size = 10
billboard = 0
shaded = false

[node name="FaceFront_2" type="Label3D" parent="."]
text = "2"
font_size = 96
pixel_size = 0.01
position = Vector3(0, 0, -0.501)
rotation = Vector3(0, 3.141593, 0)
modulate = Color(0.1, 0.1, 0.1, 1)
outline_modulate = Color(1, 1, 1, 1)
outline_size = 10
billboard = 0
shaded = false

[node name="FaceBack_5" type="Label3D" parent="."]
text = "5"
font_size = 96
pixel_size = 0.01
position = Vector3(0, 0, 0.501)
rotation = Vector3(0, 0, 0)
modulate = Color(0.1, 0.1, 0.1, 1)
outline_modulate = Color(1, 1, 1, 1)
outline_size = 10
billboard = 0
shaded = false


